IDB: Records table migration doesn't work with all versions of SQLite. https://bugs.webkit.org/show_bug.cgi?id=145993

Reviewed by Darin Adler, provisionally reviewed by Jon Lee.

* DatabaseProcess/IndexedDB/sqlite/UniqueIDBDatabaseBackingStoreSQLite.cpp:
(WebKit::v1RecordsTableSchema):
(WebKit::v1RecordsTableSchemaAlternate):
(WebKit::v2RecordsTableSchema):
(WebKit::v2RecordsTableSchemaAlternate):
(WebKit::createOrMigrateRecordsTableIfNecessary): Check both v1 and v1 Alternate whenever we check for the v1 schema.
  Ditto for the v2 schema. Crash all builds if the current schema is none of these.


Canonical link: https://commits.webkit.org/164059@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185599 268f45cc-cd09-0410-ab3c-d52691b4dbfc